--- a/public/css/sass/_variables.scss
+++ b/public/css/sass/_variables.scss
@@ -9,5 +9,6 @@ $ds_color__twitter: #1fa0f3;
 $ds_color__linkedin: #0277b5;
 $ds_color__googleplus: #da4638;
 $ds_color__pinterest: #bd081c;
+$ds_color__whatsapp: #06e676;
 
 $ds_screen__small: 600px;
