--- a/public/css/sass/_main.scss
+++ b/public/css/sass/_main.scss
@@ -29,18 +29,59 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.ds_icon.icon-linkedin-1:before { content: '\e800'; }
-.ds_icon.icon-wordpress-1:before { content: '\e801'; }
-.ds_icon.icon-facebook-1:before { content: '\e802'; }
-.ds_icon.icon-github:before { content: '\e803'; }
-.ds_icon.icon-pinterest:before { content: '\e804'; }
-.ds_icon.icon-twitter-1:before { content: '\e805'; }
-.ds_icon.icon-gplus:before { content: '\e806'; }
 
-.ds_icon.icon-linkedin-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
-.ds_icon.icon-wordpress-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
-.ds_icon.icon-facebook-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
-.ds_icon.icon-github { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
-.ds_icon.icon-pinterest { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe804;&nbsp;'); }
-.ds_icon.icon-twitter-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe805;&nbsp;'); }
-.ds_icon.icon-gplus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe806;&nbsp;'); }
+.ds_icon.icon-mail:before { content: '\e800'; } /* '' */
+.ds_icon.icon-heart:before { content: '\e801'; } /* '' */
+.ds_icon.icon-heart-empty:before { content: '\e802'; } /* '' */
+.ds_icon.icon-star:before { content: '\e803'; } /* '' */
+.ds_icon.icon-star-empty:before { content: '\e804'; } /* '' */
+.ds_icon.icon-twitter:before { content: '\f099'; } /* '' */
+.ds_icon.icon-facebook:before { content: '\f09a'; } /* '' */
+.ds_icon.icon-github-circled:before { content: '\f09b'; } /* '' */
+.ds_icon.icon-pinterest-circled:before { content: '\f0d2'; } /* '' */
+.ds_icon.icon-pinterest-squared:before { content: '\f0d3'; } /* '' */
+.ds_icon.icon-gplus-squared:before { content: '\f0d4'; } /* '' */
+.ds_icon.icon-gplus-1:before { content: '\f0d5'; } /* '' */
+.ds_icon.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.ds_icon.icon-linkedin:before { content: '\f0e1'; } /* '' */
+.ds_icon.icon-github-1:before { content: '\f113'; } /* '' */
+.ds_icon.icon-mail-squared:before { content: '\f199'; } /* '' */
+.ds_icon.icon-child:before { content: '\f1ae'; } /* '' */
+.ds_icon.icon-git-squared:before { content: '\f1d2'; } /* '' */
+.ds_icon.icon-git:before { content: '\f1d3'; } /* '' */
+.ds_icon.icon-facebook-official:before { content: '\f230'; } /* '' */
+.ds_icon.icon-pinterest-1:before { content: '\f231'; } /* '' */
+.ds_icon.icon-whatsapp:before { content: '\f232'; } /* '' */
+.ds_icon.icon-github-squared:before { content: '\f300'; } /* '' */
+.ds_icon.icon-twitter-squared:before { content: '\f304'; } /* '' */
+.ds_icon.icon-facebook-squared:before { content: '\f308'; } /* '' */
+.ds_icon.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
+.ds_icon.icon-wordpress:before { content: '\f19a'; } /* '' */
+
+.ds_icon.icon-mail { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.ds_icon.icon-heart { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
+.ds_icon.icon-heart-empty { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.ds_icon.icon-star { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
+.ds_icon.icon-star-empty { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe804;&nbsp;'); }
+.ds_icon.icon-twitter { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf099;&nbsp;'); }
+.ds_icon.icon-facebook { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf09a;&nbsp;'); }
+.ds_icon.icon-github-circled { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf09b;&nbsp;'); }
+.ds_icon.icon-pinterest-circled { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0d2;&nbsp;'); }
+.ds_icon.icon-pinterest-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0d3;&nbsp;'); }
+.ds_icon.icon-gplus-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0d4;&nbsp;'); }
+.ds_icon.icon-gplus-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0d5;&nbsp;'); }
+.ds_icon.icon-mail-alt { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0e0;&nbsp;'); }
+.ds_icon.icon-linkedin { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0e1;&nbsp;'); }
+.ds_icon.icon-github-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf113;&nbsp;'); }
+.ds_icon.icon-mail-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf199;&nbsp;'); }
+.ds_icon.icon-child { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1ae;&nbsp;'); }
+.ds_icon.icon-git-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1d2;&nbsp;'); }
+.ds_icon.icon-git { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1d3;&nbsp;'); }
+.ds_icon.icon-facebook-official { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf230;&nbsp;'); }
+.ds_icon.icon-pinterest-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf231;&nbsp;'); }
+.ds_icon.icon-whatsapp { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf232;&nbsp;'); }
+.ds_icon.icon-github-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf300;&nbsp;'); }
+.ds_icon.icon-twitter-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf304;&nbsp;'); }
+.ds_icon.icon-facebook-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf308;&nbsp;'); }
+.ds_icon.icon-linkedin-squared { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf30c;&nbsp;'); }
+.ds_icon.icon-wordpress { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf19a;&nbsp;'); }
