--- a/public/css/sass/buttons/_images.scss
+++ b/public/css/sass/buttons/_images.scss
@@ -12,11 +12,7 @@
       height: 26px;
       width: 70px;
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}.png');
-        }
-      }
+      @include set_bg_images('v1', 'png');
 
       &:hover {
         opacity: $ds__bttn_opacity;
@@ -52,11 +48,7 @@
       background-size: cover;
       background-repeat: no-repeat;
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}.svg');
-        }
-      }
+      @include set_bg_images('v2', 'svg');
 
       a {
 
@@ -90,11 +82,7 @@
         opacity: $ds__bttn_opacity;
       }
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}_3d.svg');
-        }
-      }
+      @include set_bg_images('v3', 'svg');
 
       a {
 
@@ -128,11 +116,7 @@
         opacity: $ds__bttn_opacity;
       }
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}_red.svg');
-        }
-      }
+      @include set_bg_images('v4', 'svg');
 
       a {
 
@@ -166,11 +150,7 @@
         opacity: $ds__bttn_opacity;
       }
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}_c.svg');
-        }
-      }
+      @include set_bg_images('v5', 'svg');
 
       a {
 
@@ -204,11 +184,7 @@
         opacity: $ds__bttn_opacity;
       }
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}_s.svg');
-        }
-      }
+      @include set_bg_images('v6', 'svg');
 
       a {
 
@@ -242,11 +218,7 @@
         opacity: $ds__bttn_opacity;
       }
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}_sheep.svg');
-        }
-      }
+      @include set_bg_images('v7', 'svg');
 
       a {
 
@@ -280,11 +252,7 @@
         opacity: $ds__bttn_opacity;
       }
 
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}_cup.png');
-        }
-      }
+      @include set_bg_images('v8', 'png');
 
       a {
 
@@ -313,7 +281,7 @@
         height: 24px;
         width: 24px;
 
-        @each $network in facebook twitter linkedin googleplus pinterest {
+        @each $network in facebook twitter linkedin googleplus pinterest whatsapp {
           &.ds_#{$network} {
             background-image: url('/wp-content/plugins/drim-share/public/assets/ds_#{$network}.svg');
           }
