--- a/public/css/sass/_variables.scss
+++ b/public/css/sass/_variables.scss
@@ -1,6 +1,7 @@
 $ds__border_padding: 10px;
 $ds__bttn_transition: all 1s;
 $ds__bttn_opacity: 0.8;
+$ds__bttn_opacity_str: 0.6;
 
 $ds_font__smaller: 0.8em;
 
