--- a/public/css/sass/buttons/_buttons.scss
+++ b/public/css/sass/buttons/_buttons.scss
@@ -1,13 +1,13 @@
 @import "button";
 
-/*** IMAGES ***/
+/*** IMAGES ***
 @import "images";
 
-/*** ICONS ***/
+/*** ICONS ***
 @import "icons";
 
-/*** NAMES ***/
+/*** NAMES ***
 @import "names";
 
-/*** FIXED MOBILE BAR ***/
-@import "fixed";
+*/
+@import "shapes";
