--- a/public/css/sass/drim-share.scss
+++ b/public/css/sass/drim-share.scss
@@ -9,15 +9,11 @@
  /***********************************
  ## LAYOUT
  ***********************************/
- @import "layout";
+ @import "container";
+ @import "wrapper";
+ @import "container_mobile";
 
  /***********************************
  ## BUTTONS
  ***********************************/
  @import "buttons/buttons";
-
-
- /***********************************
- ## ICONS / FONTS
- ***********************************/
- @import "main";
