--- a/public/css/sass/buttons/_button.scss
+++ b/public/css/sass/buttons/_button.scss
@@ -17,16 +17,34 @@
       width: 100%;
       height: 100%;
 
+      svg {
+        position: relative;
+      }
+
       &:hover {
         text-decoration: none;
         box-shadow: none;
         border-bottom: 0 none;
       }
 
-      i {
-        font-size: 1em;
-        width: auto;
-        margin-right: 0;
+    }
+  }
+
+  @for $i from 1 through 10 {
+    @each $set in _icon, _text {
+      &.ds#{$set}_v#{$i} {
+        .ds_bttn {
+          a {
+            svg {
+              &.icon {
+                width: 1em;
+                height: 1em;
+                vertical-align: middle;
+                fill: #fff;
+              }
+            }
+          }
+        }
       }
     }
   }
